--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,20 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  # cloud_firestore: ^0.14.0+2
+  image_picker: ^0.6.7+7
+  firebase_storage: ^4.0.0
+  firebase_auth: ^0.18.0+1
+  google_sign_in: ^4.5.3
+  geolocator: ^5.3.2+2
+  uuid: ^2.2.2
+  image: ^2.1.14
+  animator: ^2.0.1
+  path_provider: ^1.6.14
+  firebase_messaging: ^7.0.0
+  timeago: ^2.0.27
+  cached_network_image:
+  flutter_svg:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
